--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,15 +3,11 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.h2.console.settings.web-allow-others=true
 
-# Datasource
-spring.datasource.url=jdbc:h2:file:./db_mmw
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.hibernate.ddl-auto=update
+
+
 
 # MyMagicWeather config
-mmw.interval=3600000
+mmw.interval=30000
 mmw.offset=5400
 mmw.apikey=acff9fc7b20e0ff3ebb1f1615f76abb1
-mmw.callopenweather=false
+mmw.callopenweather=true
