Metodi Poat /config e /stats funzionanti

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,13 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.h2.console.settings.web-allow-others=true
 
+logging.level.org.springframework.web: DEBUG
+
 
 
 
 # MyMagicWeather config
-mmw.interval=30000
+mmw.interval=60000
 mmw.offset=5400
 mmw.apikey=acff9fc7b20e0ff3ebb1f1615f76abb1
 mmw.callopenweather=true
