--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,11 +5,14 @@ spring.h2.console.settings.web-allow-others=true
 
 logging.level.org.springframework.web: DEBUG
 
-
+# INTERNATIONALIZATION (MessageSourceAutoConfiguration)
+spring.messages.basename=file_lingua
+spring.messages.cache-seconds=-1
+spring.messages.encoding=UTF-8 
 
 
 # MyMagicWeather config
-mmw.interval=60000
+mmw.interval=30000
 mmw.offset=5400
 mmw.apikey=acff9fc7b20e0ff3ebb1f1615f76abb1
 mmw.callopenweather=true
