--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,16 +3,22 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 spring.h2.console.settings.web-allow-others=true
 
-logging.level.org.springframework.web: DEBUG
 
-# INTERNATIONALIZATION (MessageSourceAutoConfiguration)
-spring.messages.basename=file_lingua
-spring.messages.cache-seconds=-1
-spring.messages.encoding=UTF-8 
+logging.level.org.springframework.web: DEBUG
+logging.level.org.hibernate: ERROR
+
+
+
+# Datasource
+spring.datasource.url=jdbc:h2:file:C:/Users/mariu/Meteo_db
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=update
 
 
 # MyMagicWeather config
-mmw.interval=30000
+mmw.interval=60000
 mmw.offset=5400
 mmw.apikey=acff9fc7b20e0ff3ebb1f1615f76abb1
 mmw.callopenweather=true
