--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,9 +17,9 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=update
 
 
-# MyMagicWeather config
-mmw.interval=60000
-mmw.offset=5400
-mmw.apikey=acff9fc7b20e0ff3ebb1f1615f76abb1
-mmw.callopenweather=true
+# Meteo config
+meteo.interval=3600000
+meteo.offset=5400
+meteo.apikey=acff9fc7b20e0ff3ebb1f1615f76abb1
+meteo.callopenweather=true
 
